tests/error/sizeoferr.sp
program error;

var 
    a: integer;

begin
    a := sizeof (b)
end.